fix: property container are overflowing (#120)
* fix overflow bug and add debug mode

* remove unneeded important style class

* remove offsetSize

* remove missed offsetSize mode

* make overlay standard conditional rendering

* autoimport linting

--- a/src/components/ConnectingCell/styles.module.css
+++ b/src/components/ConnectingCell/styles.module.css
@@ -11,7 +11,8 @@
 
 .connectingCellContent {
   padding-top: 5px;
-  width: 100%;
+  flex: 1;
+  min-width: 0; /* Prevent cell content from overflowing */
 }
 
 .upperLeftConnectingCell {
@@ -32,10 +33,6 @@
 .lowerRightConnectingCell {
   min-width: calc(0.5rem + var(--speakeasy-expandable-cell-size));
   min-height: var(--speakeasy-expandable-cell-size);
-}
-
-.connectingCellContent {
-  flex: 1;
 }
 
 .verticalConnected {
